# mastodon-list-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  buildscript.js  package-lock.json  package.json
.github/workflows/: build-image.yml  test.yml
.sqlx/: query-1d80e2ad3f66823106f2548edbf238035b7c3595521d3b07ca74d9d3cee61b4f.json  query-3e1251ad82d59b960327bcb2111b400d055a4e0330088b821d17812c6bc2bd70.json  query-99f7d81310d200e13e81f4262645b2eaa35d2f6140218a6142641f95c335cdaa.json  query-a9ff36bbfe0a521e4c7bd3cb422613ce493752caa5f9eb84885a96e7826ae1b0.json  query-c26330381e58e68e7c701fc09875e8152a27cb5dfb3eb1aaaa546cf0e9125e57.json  query-c888d65a689244654941614300f160396da839e6157ad237f7befe42edbc4928.json  query-cccb99b56832dc039ed42ced7f5450ae6ce2f2fb195412dcb8f051a882557d65.json  query-e6c325aef58b191cfe019ef0fba43d661466ccc8b55013c7e35c209c5786bdb9.json
migrations/: 0001_init.sql  0002_list-count.sql
src/: api_cache.rs  api_client.rs  api_helpers.rs  api_models.rs  app.ts  auth.rs  config.rs  error.rs  index.html  list_manager.rs  main.rs  runner.rs  store.rs
src/svelte/: App.svelte
