[package]
name = "mastodon-list-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/untitaker/mastodon-list-bot"
repository = "https://github.com/untitaker/mastodon-list-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
chrono = { version = "0.4.31", features = ["serde"] }
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
pom = "3.3.0"
pretty_env_logger = "0.5.0"
regex = "1.10.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "multipart", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "sqlite", "chrono"] }
clap = { version = "4.4.2", features = ["derive"] }
axum = { version = "0.7.7", features = ["macros"] }
thiserror = "1.0.49"
axohtml = "0.5.0"
serde_json = "1.0.132"

[dev-dependencies]
serde_json = "1.0.107"
