[package]
name = "mastodon-list-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/untitaker/mastodon-list-bot"
repository = "https://github.com/untitaker/mastodon-list-bot"

[features]
hotreload = ["maud/hotreload"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
chrono = { version = "0.4.31", features = ["serde"] }
itertools = "0.13.0"
once_cell = "1.18.0"
pom = "3.3.0"
regex = "1.10.0"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "multipart", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono"] }
clap = { version = "4.4.2", features = ["derive"] }
axum = { version = "0.7.7", features = ["macros"] }
thiserror = "1.0.49"
serde_json = "1.0.132"
# https://github.com/lambda-fairy/maud/issues/392
maud = { version = "0.26.0", features = ["axum"], git = "https://github.com/untitaker/maud", branch = "hotreload-prototype-v2" }
sentry = { version = "0.34.0", features = ["tracing", "reqwest", "rustls"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = "0.13.0"
time = "0.3.36"
memory-serve = "0.6.0"
